--- a/less/overrides.less
+++ b/less/overrides.less
@@ -272,6 +272,10 @@ a.tabledrag-handle .handle {
   width: auto;
 }
 
+form input.form-radio, form input.form-checkbox{
+  margin:6px 0 0 -18px !important;
+}
+
 // Error containers.
 .error {
   color: @state-danger-text;
